--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -7,21 +7,21 @@
         width: 500px; border-radius: 50px;
         background-color: skyblue;
         transition: all 0.3s;
+        box-shadow: 0 5px 5px rgba(0,0,0,0.2);
         .gnb {
             display: flex; justify-content: center;
             li {
-                line-height: 85px;
-                margin: 0 20px;
+                line-height: 85px; margin: 0 20px;
                 font-size: 16px;
                 a {
-                    color: #000;
+                    color: #000; transition: all 0.3s;
                 }
             }
             li.on {
                 a {
                     color: #552404;
                     background-color: #ee9153;
-                    width: 70px; line-height: 40px;
+                    width: 100px; line-height: 40px;
                     border-radius: 30px; text-align: center;
                     display: inline-block;
                 }
@@ -41,6 +41,7 @@
     .section {
         scroll-snap-align: start;
         width: 100%;
+        // height: 1080px;
         height: 100vh;
         &:nth-child(1) {background-color: #f86969; height: 96vh;}
         &:nth-child(2) {background-color: #7481fc;}
@@ -51,5 +52,4 @@
 //하단 영역
 #footer {
     width: 100%; height: 100vh;
-    
 }
