--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@ body {
 }
 
 #container {
-  scroll-snap-type: y mandatory;
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
 }
 #container .section {
   scroll-snap-align: start;
@@ -90,6 +91,47 @@ body {
 }
 #container .section:nth-child(4) {
   background-color: #6ace77;
+}
+#container .intro {
+  display: flex;
+  justify-content: center;
+}
+#container .intro .center {
+  width: 80%;
+}
+#container .intro .center .text_ani_box {
+  display: flex;
+  justify-content: center;
+}
+#container .intro .center .text_ani_box svg {
+  fill: none;
+  width: 500px;
+  stroke-width: 4px;
+}
+#container .intro .center .text_ani_box path {
+  stroke: #6d1010;
+  stroke-dasharray: 779.64;
+  stroke-dashoffset: 779.64;
+  -webkit-animation: path 6s forwards;
+          animation: path 6s forwards;
+}
+@-webkit-keyframes path {
+  50% {
+    stroke-dashoffset: 0;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    fill: #ad6565;
+  }
+}
+@keyframes path {
+  50% {
+    stroke-dashoffset: 0;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    fill: #ad6565;
+  }
 }
 #container .explain .pf {
   display: flex;
