--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -36,9 +36,9 @@
 //중간 영역
 #container {
     // overflow: auto;
-    scroll-snap-type: y mandatory;
+    // scroll-snap-type: y mandatory;
     .section {
-        scroll-snap-align: start;
+        // scroll-snap-align: start;
         width: 100%;
         // height: 1080px;
         &:nth-child(1) {background-color: #f86969; height: 96vh;}
@@ -53,9 +53,10 @@
             width: 80%;
             .text_ani_box {
                 display: flex; justify-content: center;
+                padding-top: 160px;
                 svg {
                     fill: none;
-                    width: 500px;
+                    width: 700px;
                     stroke-width: 4px;
                 }
                 path {
@@ -69,6 +70,21 @@
                     50% {stroke-dashoffset: 0; }
                     100% {stroke-dashoffset: 0; fill: #ad6565;}
                 }
+            }
+        }
+    }
+    //about_me 영역
+    .about_me {
+        display: flex; justify-content: center;
+        .center {
+            width: 80%;
+            //기본사항
+            .info {
+                border-bottom: 1px solid #c2c2c2;
+            }
+            .wrap {
+                display: flex;
+                > div {width: 50%;}
             }
         }
     }
