--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -6,7 +6,7 @@
     z-index: 99;
     .center {
         width: 500px; border-radius: 50px;
-        background-color: skyblue;
+        background-color: #f35d5d;
         transition: all 0.3s;
         box-shadow: 0 5px 5px rgba(0,0,0,0.2);
         .gnb {
@@ -41,19 +41,17 @@
         // scroll-snap-align: start;
         width: 100%;
         // height: 1080px;
-        &:nth-child(1) {background-color: #f86969; height: 96vh;}
-        &:nth-child(2) {background-color: #7481fc;}
-        &:nth-child(3) {background-color: #ee9153;}
-        &:nth-child(4) {background-color: #6ace77;}
     }
     //intro 영역
     .intro {
         display: flex; justify-content: center;
+        align-items: center;
+        height: 96vh;
         .center {
             width: 80%;
             .text_ani_box {
                 display: flex; justify-content: center;
-                padding-top: 160px;
+                // padding-top: 160px;
                 svg {
                     fill: none;
                     width: 700px;
@@ -63,12 +61,23 @@
                     stroke: #6d1010;
                     stroke-dasharray: 779.64;
                     stroke-dashoffset: 779.64;
-                    animation: path 6s forwards;
+                    // animation: name duration timing-function delay iteration-count direction fill-mode;
+                    animation: path 6s forwards .7s;
+                    box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+                    text-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+
+                    @keyframes path {
+                        50% {stroke-dashoffset: 0; }
+                        100% {stroke-dashoffset: 0; fill: #f35d5d; opacity: .7;}
+                    }
                 }
-        
-                @keyframes path {
-                    50% {stroke-dashoffset: 0; }
-                    100% {stroke-dashoffset: 0; fill: #ad6565;}
+            }
+            .text_box {
+                text-align: center; margin-top: 100px;
+                p {
+                    font-size: 23px; line-height: 40px;
+                    font-weight: 500;
+                    span {color: #f35d5d;}
                 }
             }
         }
@@ -76,26 +85,55 @@
     //about_me 영역
     .about_me {
         display: flex; justify-content: center;
+        border-top: 1px solid #e05e6f;
+        // background-color: #ffc5c8;
+        // height: 100vh;
         .center {
-            width: 80%;
+            width: 80%; padding-bottom: 160px;
+            .title {
+                padding: 170px 0 25px; font-size: 14px;
+                color: #f35d5d;
+            }
+            > div {
+                font-size: 15px; line-height: 25px;
+                .sub_title {
+                    font-size: 15px; padding: 45px 0 10px;
+                    i {
+                        margin-right: 5px; font-size: 12px;
+                        position: relative; bottom: 2px;
+                        color: #e05e6f;
+                    }
+                }
+                .info_st {padding: 0 0 10px;}
+            }
             //기본사항
             .info {
-                border-bottom: 1px solid #c2c2c2;
+                border-bottom: 1px solid #e05e6f;
+                padding-bottom: 30px;
             }
-            .wrap {
+            .bottom {
                 display: flex;
-                > div {width: 50%;}
+                > div {
+                    &:nth-child(1){width: 45%;}
+                    &:nth-child(2){width: 45%;}
+                    &:nth-child(3){width: 20%;}
+                }
+                .wrap {
+                    display: flex;
+                    .left {width: 50%;}
+                    .right {width: 50%;}
+                }
             }
         }
     }
-    //explain 영역
-    .explain {
+    //portfolio 영역
+    .portfolio {
         .pf {
-            display: flex; align-items: center;
-            overflow: hidden;
-            &:nth-child(1) {background-color: #ffefef; height: 100vh;}
-            &:nth-child(2) {background-color: #f1f2ff;}
-            &:nth-child(3) {background-color: #fffaf6;}
+            display: flex; overflow: hidden; height: 100vh;
+            background-color: #fffaf6;
+            // &:nth-child(1) {background-color: #ffefef;}
+            // &:nth-child(2) {background-color: #f1f2ff;}
+            // &:nth-child(3) {background-color: #fffaf6;}
             > div {width: 50%;}
             .left {
                 overflow: hidden;
@@ -108,11 +146,66 @@
                     // }
                 }
             }
-            // .right {}
+            .right {
+                padding: 0 60px; box-sizing: border-box;
+                display: flex; align-items: center;
+                .context {
+                    .title {
+                        padding: 0 0 30px; font-size: 14px;
+                        color: #f35d5d;
+                    }
+                    .info1 {
+                        padding-bottom: 30px;
+                        font-size: 15px; line-height: 25px;
+                        p {
+                            span {font-weight: 500; color: #ca5656;}
+                        }
+                    }
+                    .info2 {
+                        p {
+                            font-size: 15px; padding-left: 8px;
+                            line-height: 25px;
+                            &:first-child {
+                                padding: 20px 0 10px;
+                                font-weight: 500;
+                                color: #ca5656;
+                                i {
+                                    font-size: 12px; position: relative;
+                                    bottom: 2px; margin-right: 5px;
+                                    color: #eb6d68;
+                                }
+                            }
+                        }
+                        .bank {
+                            font-size: 14px; padding-left: 18px;
+                            mark {
+                                font-weight: 500; background-color: #ffcbc9;
+                                padding: 0 5px;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
 //하단 영역
 #footer {
-    width: 100%; height: 100vh;
+    width: 100%;
+    display: flex; justify-content: center;
+    border-top: 1px solid #c2c2c2;
+    .center {
+        width: 80%; padding: 30px 0;
+        .f_top {
+            display: flex; padding-bottom: 20px;
+            > div {
+                width: 50%; font-weight: 500;
+                .sub_title {font-weight: normal; padding-bottom: 10px;}
+            }
+        }
+        .f_bot {
+            font-size: 30px;
+            font-weight: 500;
+        }
+    }
 }
