--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -6,7 +6,7 @@
     z-index: 99;
     .center {
         width: 500px; border-radius: 50px;
-        background-color: #f35d5d;
+        background-color: #ffa1a1;
         transition: all 0.3s;
         box-shadow: 0 5px 5px rgba(0,0,0,0.2);
         .gnb {
@@ -19,7 +19,7 @@
             li.on {
                 a {
                     color: #552404;
-                    background-color: #ee9153;
+                    background-color: #ffffff;
                     width: 100px; line-height: 40px;
                     border-radius: 30px; text-align: center;
                     display: inline-block;
@@ -85,19 +85,20 @@
     //about_me 영역
     .about_me {
         display: flex; justify-content: center;
+        align-items: center;
         border-top: 1px solid #e05e6f;
         // background-color: #ffc5c8;
-        // height: 100vh;
+        height: 100vh;
         .center {
             width: 80%; padding-bottom: 160px;
             .title {
-                padding: 170px 0 25px; font-size: 14px;
+                padding: 60px 0 80px; font-size: 20px;
                 color: #f35d5d;
             }
             > div {
                 font-size: 15px; line-height: 25px;
                 .sub_title {
-                    font-size: 15px; padding: 45px 0 10px;
+                    font-size: 15px; padding: 75px 0 10px;
                     i {
                         margin-right: 5px; font-size: 12px;
                         position: relative; bottom: 2px;
@@ -109,7 +110,7 @@
             //기본사항
             .info {
                 border-bottom: 1px solid #e05e6f;
-                padding-bottom: 30px;
+                padding-bottom: 55px;
             }
             .bottom {
                 display: flex;
@@ -128,6 +129,7 @@
     }
     //portfolio 영역
     .portfolio {
+        padding-top: 85px;
         .pf {
             display: flex; overflow: hidden; height: 100vh;
             background-color: #fffaf6;
@@ -136,14 +138,29 @@
             // &:nth-child(3) {background-color: #fffaf6;}
             > div {width: 50%;}
             .left {
-                overflow: hidden;
-                img {
-                    width: 100%;
-                    // animation: move 3s linear infinite;
-                    // @keyframes move {
-                    //     0% {transform: translateX(0);}
-                    //     100% {transform: translateX(-50%);}
-                    // }
+                overflow: hidden; position: relative;
+                a {
+                    img {
+                        width: 100%;
+                    }
+                }
+                .hover_bg {
+                    position: absolute; left: 0; top: 0;
+                    width: 100%; height: 100%;
+                    background-color: rgba(0,0,0,0.6);
+                    text-align: center; transition: all 0.5s;
+                    opacity: 0;
+                    a {
+                        color: #fff; font-size: 22px;
+                        width: 100%; height: 100%;
+                        display: flex; align-items: center;
+                        justify-content: center;
+                        flex-direction: column;
+                        p {margin-top: 20px;}
+                    }
+                }
+                &:hover {
+                    .hover_bg {opacity: 1;}
                 }
             }
             .right {
@@ -151,8 +168,17 @@
                 display: flex; align-items: center;
                 .context {
                     .title {
-                        padding: 0 0 30px; font-size: 14px;
+                        padding: 0 0 20px; font-size: 20px;
                         color: #f35d5d;
+                    }
+                    .link {
+                        display: block; color: #f35d5d;
+                        font-weight: 600; font-size: 16px;
+                        padding-bottom: 20px;
+                        i {
+                            margin-right: 3px; font-size: 14px;
+                            
+                        }
                     }
                     .info1 {
                         padding-bottom: 30px;
@@ -195,15 +221,16 @@
     display: flex; justify-content: center;
     border-top: 1px solid #c2c2c2;
     .center {
-        width: 80%; padding: 30px 0;
+        width: 80%; padding: 100px 0;
         .f_top {
-            display: flex; padding-bottom: 20px;
+            display: flex;
             > div {
-                width: 50%; font-weight: 500;
-                .sub_title {font-weight: normal; padding-bottom: 10px;}
+                width: 50%; font-weight: 500; font-size: 20px;
+                .sub_title {font-weight: normal; padding-bottom: 15px;}
             }
         }
         .f_bot {
+            padding-top: 100px;
             font-size: 30px;
             font-weight: 500;
         }
