--- a/css/style.css
+++ b/css/style.css
@@ -71,17 +71,36 @@ body {
   border-radius: 0;
 }
 
-#container .section {
-  width: 100%;
-}
 #container .intro {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 96vh;
+  position: relative;
+}
+#container .intro .bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  overflow: hidden;
+}
+#container .intro .bg img {
+  width: 100%;
+}
+#container .intro .bg .black {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 #container .intro .center {
   width: 80%;
+  z-index: 5;
 }
 #container .intro .center .text_ani_box {
   display: flex;
@@ -93,12 +112,23 @@ body {
   stroke-width: 4px;
 }
 #container .intro .center .text_ani_box path {
-  stroke: #6d1010;
+  stroke: #fff;
   stroke-dasharray: 779.64;
   stroke-dashoffset: 779.64;
-  animation: path 6s forwards 0.7s;
+  -webkit-animation: path 5s forwards 0.7s;
+          animation: path 5s forwards 0.7s;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+@-webkit-keyframes path {
+  50% {
+    stroke-dashoffset: 0;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    fill: #fff;
+    opacity: 0.9;
+  }
 }
 @keyframes path {
   50% {
@@ -106,8 +136,8 @@ body {
   }
   100% {
     stroke-dashoffset: 0;
-    fill: #f35d5d;
-    opacity: 0.7;
+    fill: #fff;
+    opacity: 0.9;
   }
 }
 #container .intro .center .text_box {
@@ -118,6 +148,7 @@ body {
   font-size: 23px;
   line-height: 40px;
   font-weight: 500;
+  color: #fff;
 }
 #container .intro .center .text_box p span {
   color: #f35d5d;
