--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -35,20 +35,26 @@
 }
 //중간 영역
 #container {
-    // overflow: auto;
-    // scroll-snap-type: y mandatory;
-    .section {
-        // scroll-snap-align: start;
-        width: 100%;
-        // height: 1080px;
-    }
     //intro 영역
     .intro {
         display: flex; justify-content: center;
         align-items: center;
         height: 96vh;
+        position: relative;
+        .bg {
+            position: absolute; left: 0; top: 0;
+            width: 100%; height: 100%;
+            z-index: 2; overflow: hidden;
+            img {width: 100%;}
+            .black {
+                position: absolute; left: 0; top: 0;
+                width: 100%; height: 100%;
+                background-color: rgba(0,0,0,.7);
+            }
+        }
         .center {
             width: 80%;
+            z-index: 5;
             .text_ani_box {
                 display: flex; justify-content: center;
                 // padding-top: 160px;
@@ -58,17 +64,22 @@
                     stroke-width: 4px;
                 }
                 path {
-                    stroke: #6d1010;
+                    // stroke: #6d1010;
+                    stroke: #fff;
                     stroke-dasharray: 779.64;
                     stroke-dashoffset: 779.64;
                     // animation: name duration timing-function delay iteration-count direction fill-mode;
-                    animation: path 6s forwards .7s;
+                    animation: path 5s forwards .7s;
                     box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
                     text-shadow: 5px 5px 5px rgba(0,0,0,0.2);
 
                     @keyframes path {
                         50% {stroke-dashoffset: 0; }
-                        100% {stroke-dashoffset: 0; fill: #f35d5d; opacity: .7;}
+                        100% {
+                            stroke-dashoffset: 0;
+                            // fill: #f35d5d;
+                            fill: #fff;
+                            opacity: .9;}
                     }
                 }
             }
@@ -76,7 +87,7 @@
                 text-align: center; margin-top: 100px;
                 p {
                     font-size: 23px; line-height: 40px;
-                    font-weight: 500;
+                    font-weight: 500; color: #fff;
                     span {color: #f35d5d;}
                 }
             }
