--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -6,7 +6,7 @@
     z-index: 99;
     .center {
         width: 500px; border-radius: 50px;
-        background-color: #ffa1a1;
+        background-color: #4e3431;
         transition: all 0.3s;
         box-shadow: 0 5px 5px rgba(0,0,0,0.2);
         .gnb {
@@ -14,12 +14,12 @@
             li {
                 line-height: 85px; margin: 0 20px;
                 font-size: 16px;
-                a {color: #000; transition: all 0.3s;}
+                a {color: #fff; transition: all 0.3s;}
             }
             li.on {
                 a {
-                    color: #552404;
-                    background-color: #ffffff;
+                    color: #4e3431;
+                    background-color: #fff;
                     width: 100px; line-height: 40px;
                     border-radius: 30px; text-align: center;
                     display: inline-block; font-weight: 500;
@@ -57,8 +57,48 @@
         .border {
             position: absolute; left: 50%; top: 50%;
             transform: translate(-50%,-50%);
-            width: 90%; height: 80%;
-            border: 5px solid #fff;
+            width: 90%;
+            height: 80%;
+            > div {
+                position: absolute; background-color: #fff;
+                &:nth-child(1),&:nth-child(2) {
+                    height: 5px;
+                    animation-name: border1;
+                    animation-duration: 1.5s;
+                    animation-timing-function: linear;
+                    animation-delay: 3.5s;
+                    animation-iteration-count: 1;
+                    animation-direction: normal;
+                    animation-fill-mode: forwards;
+
+                    @keyframes border1 {
+                        0% {width: 0;}
+                        100% {width: 100%;}
+                    }
+                }
+
+                &:nth-child(3),&:nth-child(4) {
+                    width: 5px;
+                    animation-name: border2;
+                    animation-duration: 1.5s;
+                    animation-timing-function: linear;
+                    animation-delay: 5s;
+                    animation-iteration-count: 1;
+                    animation-direction: normal;
+                    animation-fill-mode: forwards;
+
+                    @keyframes border2 {
+                        0% {height: 0;}
+                        100% {height: 100%;}
+                    }
+
+                }
+                
+                &:nth-child(1) {left: 0; top: 0;}
+                &:nth-child(2) {right: 0; bottom: 0;}
+                &:nth-child(3) {left: 0; bottom: 0;}
+                &:nth-child(4) {right: 0; top: 0;}
+            }
         }
         .center {
             width: 80%;
@@ -125,7 +165,7 @@
         .center {
             width: 80%; padding-bottom: 160px;
             .title {
-                padding: 60px 0 80px; font-size: 20px;
+                padding: 150px 0 80px; font-size: 20px;
                 color: #f35d5d;
             }
             > div {
@@ -140,10 +180,14 @@
                 }
                 .info_st {padding: 0 0 10px;}
             }
-            //기본사항
-            .info {
+            .top {
+                display: flex;
                 border-bottom: 1px solid #e05e6f;
                 padding-bottom: 55px;
+                //기본사항
+                .info {width: 30%;}
+                //나를 표현하는 문장
+                // .sentence {}
             }
             .bottom {
                 display: flex;
@@ -155,6 +199,7 @@
                 .wrap {
                     display: flex;
                     .left {width: 50%;}
+                    .ed_left {width: 65%;}
                     .right {width: 50%;}
                 }
             }
@@ -177,6 +222,10 @@
                         width: 100%;
                     }
                 }
+                //test
+                .move {img{width: 100%;}}
+
+
                 .hover_bg {
                     position: absolute; left: 0; top: 0;
                     width: 100%; height: 100%;
@@ -241,6 +290,10 @@
                                 font-weight: 500; background-color: #ffcbc9;
                                 padding: 0 5px;
                             }
+                            i {
+                                font-size: 11px; position: relative;
+                                bottom: 1px; margin: 0 5px;
+                            }
                         }
                     }
                 }
@@ -253,6 +306,12 @@
     width: 100%;
     display: flex; justify-content: center;
     border-top: 1px solid #c2c2c2;
+    color: #fff;
+    background-color: #562b2b;
+    .title {
+        padding-bottom: 100px; font-size: 20px;
+        color: #fff;
+    }
     .center {
         width: 80%; padding: 100px 0;
         .f_top {
@@ -263,8 +322,7 @@
             }
         }
         .f_bot {
-            padding-top: 100px;
-            font-size: 30px;
+            padding-top: 100px; font-size: 30px;
             font-weight: 500;
         }
     }
