--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -181,9 +181,8 @@
                 .info_st {padding: 0 0 10px;}
             }
             .top {
-                display: flex;
+                display: flex; padding-bottom: 55px;
                 border-bottom: 1px solid #e05e6f;
-                padding-bottom: 55px;
                 //기본사항
                 .info {width: 30%;}
                 //나를 표현하는 문장
@@ -211,21 +210,14 @@
         .pf {
             display: flex; overflow: hidden; height: 100vh;
             background-color: #fffaf6;
-            // &:nth-child(1) {background-color: #ffefef;}
-            // &:nth-child(2) {background-color: #f1f2ff;}
-            // &:nth-child(3) {background-color: #fffaf6;}
             > div {width: 50%;}
             .left {
                 overflow: hidden; position: relative;
                 a {
-                    img {
-                        width: 100%;
-                    }
+                    img {width: 100%;}
                 }
                 //test
                 .move {img{width: 100%;}}
-
-
                 .hover_bg {
                     position: absolute; left: 0; top: 0;
                     width: 100%; height: 100%;
@@ -257,10 +249,7 @@
                         display: block; color: #f35d5d;
                         font-weight: 600; font-size: 16px;
                         padding-bottom: 20px;
-                        i {
-                            margin-right: 3px; font-size: 14px;
-                            
-                        }
+                        i {margin-right: 3px; font-size: 14px;}
                     }
                     .info1 {
                         padding-bottom: 30px;
