--- a/css/style.css
+++ b/css/style.css
@@ -262,11 +262,38 @@ body {
 }
 #container .about_me .center .top {
   display: flex;
-  border-bottom: 1px solid #e05e6f;
   padding-bottom: 55px;
+  border-bottom: 1px solid #e05e6f;
 }
 #container .about_me .center .top .info {
-  width: 30%;
+  width: 35%;
+}
+#container .about_me .center .top .sentence {
+  position: relative;
+}
+#container .about_me .center .top .sentence::before {
+  content: "";
+  display: block;
+  width: 395px;
+  height: 36px;
+  position: absolute;
+  left: -2px;
+  top: -3px;
+  background-color: #e05e6f;
+  z-index: 1;
+}
+#container .about_me .center .top .sentence .t_text {
+  font-size: 26px;
+  font-weight: 700;
+  color: #fff;
+  z-index: 2;
+  position: relative;
+  margin-bottom: 18px;
+}
+#container .about_me .center .top .sentence .b_text {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
 }
 #container .about_me .center .bottom {
   display: flex;
